--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -63,7 +63,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Ingredients">8 cloves garlic, crushed</p>
     <p class="Ingredients">1 teaspoon salt</p>
     <p class="Ingredients" style="border-bottom:none">2 ½ - 3 tablespoons cooking oil</p></div></div>
-    <div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <div style="text-align:center;margin:30px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
@@ -74,7 +74,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
 </script></div>
     <div class="row"><div class="hide-s AdBox" style="margin:10px 20px 0 0;float:left"></div>
     <div class="Text" style="display:inline-block">
-    <h3 style="margin:30px 0 30px 0">Directions</h3>
+    <h3>Directions</h3>
     <p class="Directions">Combine salt and rice. Gently mix until well incorporated.</p>
     <p class="Directions">Heat the cooking oil in a pan.</p>
     <p class="Directions">Once the oil starts to heat-up, put-in the crushed garlic. Cook until the garlic turns light brown. Remove the garlic and set aside.</p>
@@ -84,7 +84,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Directions">Turn-off the heat and transfer to a serving bowl.</p>
     <p class="Directions">Serve. Share and enjoy!</p></div></div>
     </div><br></div>
-	<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div style="text-align:center;margin:30px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
