--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -49,6 +49,15 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
 <h1 style="letter-spacing:-3px">Paano Mag-Franchise ng Jollibee</h1></div></div>
 
 <div class="text" style="width:100%;max-width:900px;margin:auto">
+	<div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Ad Bottom -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:50px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="4062277366"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
 <br><p>Enjoy seamless communication with AI-powered messages. The artificial intelligence powering Chanty team messenger uses machine learning to predict responses.</p>
 <!-- Image --> <div style="padding:25px 16px"><img src="../../images/mixing-bowl-vector.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%;border-radius:2px"><p rel="nofollow" style="color:#999;font-size:12px;padding:0px;margin-top:-8px;text-align:right" href="https://vecteezy.com">ector by www.Vecteezy.com</p></div>
 <div class="Recipe"><p class="RP" style="width:60%"><b>READY IN:</b> 30mins.</p><p class="RP" style="width:40%;padding-left:12px;border-left:dotted 1px #626567;"><b>SERVES:</b> 4</p><p class="unit"style="font-size:14px;padding:37px 0 20px 0;letter-spacing:.5px"><b>UNITS:</b> US</p>
@@ -63,7 +72,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Ingredients">8 cloves garlic, crushed</p>
     <p class="Ingredients">1 teaspoon salt</p>
     <p class="Ingredients" style="border-bottom:none">2 ½ - 3 tablespoons cooking oil</p></div></div>
-    <div style="text-align:center;margin:30px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <div style="text-align:center;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
@@ -83,8 +92,8 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Directions">Add-in the fried garlic. Toss to distribute.</p>
     <p class="Directions">Turn-off the heat and transfer to a serving bowl.</p>
     <p class="Directions">Serve. Share and enjoy!</p></div></div>
-    </div><br></div>
-	<div style="text-align:center;margin:30px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    </div></div>
+	<div style="text-align:center;margin:50px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
