--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -48,7 +48,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
 <div class="HTitleBox" style="overflow:hidden;max-width:1200px"><img src="../../images/Logo3.png" alt="TagLish Blog" style="color:#fff;width:230px;margin:12px 0 0 6px"><a href="javascript:void(0)" style="font-size:25px;float:right;color:#fff;padding:15px 27px 10px 18px;letter-spacing:-9.5px" onclick="openNav()"><b>&#9776;&#9776;</b></a>
 <h1 style="letter-spacing:-3px">Paano Mag-Franchise ng Jollibee</h1></div></div>
 
-<div class="text" style="width:100%;max-width:900px;margin:auto">
+<div class="text" style="width:100%;max-width:900px;margin:auto"><br>
 	<div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Ad Bottom -->
 <ins class="adsbygoogle"
