--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -80,7 +80,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
      data-ad-slot="3410087315"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><a style="color:#a6a6a6; display:block">advertisement</a></div>
+</script><a style="color:#a6a6a6;display:block;letter-spacing:3px;font-size:13px">advertisement</a></div>
     <div class="row"><div class="hide-s AdBox" style="margin:10px 20px 0 0;float:left"></div>
     <div class="Text" style="display:inline-block">
     <h3>Directions</h3>
