--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -93,7 +93,7 @@ function scrollFunction() {if (document.body.scrollTop > 90 || document.document
     <p class="Directions">Turn-off the heat and transfer to a serving bowl.</p>
     <p class="Directions">Serve. Share and enjoy!</p></div></div>
     </div></div>
-	<div style="text-align:center;margin:50px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div style="text-align:center;margin:40px 0 70px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
