--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -35,7 +35,7 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 </style></head><body>
 
 <div id="navbar" style="background:#ff3c36;position:fixed;color:white;width:100%;display:block">
-<img src="../../images/LogoNew7.png" alt="TagLish Blog" style="color:#fff;width:235px;padding:1px 0 7px 0;opacity:.95">
+<img src="../../images/LogoNew7.png" alt="TagLish Blog" style="color:#fff;width:235px;padding:0 0 6px 0;opacity:.95">
 <div class="scrollmenu">
   <a href="#home">Home</a>
   <a href="#news">Ano...?</a>
@@ -54,7 +54,7 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
   <a href="#work">Work</a>
 </div>
 </div>
-<script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-63px";}prevScrollpos = currentScrollPos;}</script>
+<script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-53px";}prevScrollpos = currentScrollPos;}</script>
 
 
 <div class="text" style="margin-top:125px">
