--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -11,13 +11,6 @@
 <meta property="article:tag" content="liver function" />
 <meta property="article:tag" content="potassium rich foods" />
 <meta property="article:tag" content="what does the liver do" />
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-8489405167836126",
-    enable_page_level_ads: true
-  });
-</script>
 <style>
 *{box-sizing:border-box;margin:0}html,body,.psize,a{font-family:MyFont;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}.share{width:35px;height:35px}.share:hover{width:40px;height:40px;}
 h2,h3,h4,.title{font-weight:400;letter-spacing:-3px;font-size:30px;line-height:1.2;-webkit-margin-before:10px;-webkit-margin-after:8px}
@@ -63,7 +56,7 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 <h1>Paano mag-Franchise ng McDonald's</h1>
 <div style="width:100%; padding:13px 0 30px 17px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" style="height:45px;width:45px;display:inline-block;float:left;border-radius:50%">
 <p href="" style="font-size:14px;display:inline-block;-webkit-margin-before:5px;-webkit-margin-after:0;letter-spacing:.5px;float:left;line-height:1.4;padding:0 16px 0 12px">by <span style="font-weight:500">Daniel Choge</span><br><span style="font-size:11.5px">MAY 22, 2018</span></p></div>
-<div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<div style="text-align:center; overflow:hidden; width:100%;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Ad Bottom -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:320px;height:50px"
@@ -80,12 +73,30 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 <p>What is it in them that makes them so lucky? That it feels like they have everything figured out? And what is it that you don't have that you're in this crossroad? You used to be an achiever back then, so full of goals and so determined to reach them. But now, you're not even sure of those dreams anymore. You don't know whether they are feasible or just far-fetched ambitions. If they're really what you want or just what you think you want. It's like you lost that motivation in you to go after them. Even more, you lost that spark you used to have to dream, to know, and to push through with what you want.</p>
 <blockquote><i>It's like you lost that motivation in you to go after them. Even more, you lost that spark you used to have to dream, to know, and to push through with what you want.</i></blockquote>
 <p>You are not the person you used to be. You are not the person you once envisioned you would be. You're just you, a disappointment in your eyes, helpless, hopeless, nowhere near your goals. You are not someone you ever thought you'd end up to become. And that's okay. Tell yourself that it's okay to feel down and insecure. Nobody's at the top all the time anyway. Everyone gets their own dose of highs and lows; they just don't always like to show it.</p>
+<div style="text-align:center;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	
 <p>Feel what you are feeling now, remember it, understand that it happens to everyone. And eventually, make it as your motivation to act. Feeling that you lack in some ways actually shows that you acknowledge that you have more space to improve. Feeling down shows that you’re aware that there's no way else to go but up. Don't beat yourself for feeling down. What's important is that you don't stay in that stance. You may have gotten there against your will, but you surely can crawl your way back up voluntarily.</p>
 <blockquote><i>Don't beat yourself for feeling down. What's important is that you don't stay in that stance. You may have gotten there against your will, but you surely can crawl your way back up voluntarily.</i></blockquote>
 <p>It's okay to let yourself feel sad. What's not okay is that you let that sadness, that incapacitating feeling of powerlessness weigh you down. Learn how to turn your weakness into strengths. Make that feeling your driving force to strive harder, to do things better. Someday, you'll get to a point where you'll just laugh at how hopeless you once felt and how you thought you could never emerge from it.</p>
 <p>It's okay to feel lost at times. It's okay to not know where to go or what to do. After all, that is what life is supposed to be, a delicious ambiguity. You don't know what's going to happen and that's alright. Some may pretend to, but definitely, no one does. That is how life plays. Nothing is guaranteed. It's in not knowing where life may take us that makes it all more meaningful. You may feel clueless for a while, but it won't last long. Eventually, despite your doubts and hesitations, a ray of light will shine upon you, and you will finally see clearly. There are times when we get disappointed with ourselves because of something we failed to do.</p>
 <blockquote><i>It's in not knowing where life may take us that makes it all more meaningful.</i></blockquote>
 <p>It's time to forgive yourself for not being someone you're not. Things don't always turn out the way we want them to be and we don't always end up becoming the person we initially wanted to become. You are you, a living, feeling and sane human being capable of thinking things through and enjoying what's around you, and that's enough. Learn to appreciate the things you have in your hands right now. You need to let go of your ideal self, and just enjoy who you are right now.</p>
+<div style="text-align:center;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	
 <p>Your time is coming, just not now. Those friends you keep seeing happy, those you think of are successful? They also experienced times like this; they just made a way to work around it. It's just a matter of timing and a way of thinking. Just always believe that better things are coming, if not now then soon. You will also have your take of glory days. You will also reach that moment of bliss, just not now. It will come in the right moment, in the right time, you just have to work for it and wait.</p>
 <blockquote><i>You may feel like a failure, but you are not. You never were.</i></blockquote>
 <p>You may feel like a failure, but you are not. You never were. You are just someone who's having a difficulty gliding through life, someone who's having a hard time trying to see her worth in the darkness that's currently enveloping her. Just hang in there and hold tight because when the time comes that the storm will pass, the clouds will part and the sky will finally shed its light again. And by then, you will finally see. By then, you will learn to get up and embrace the sunshine once again.</p>
