--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -51,6 +51,15 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 
 
 <div class="text" style="margin-top:115px">
+<div style="text-align:center;padding:0 16px; overflow:hidden; width:100%;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 468x60 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:468px;height:60px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3583510300"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	
 <!-- Image --> <div style="padding:28px 16px 14px 16px"><img src="../../images/mixing-bowl-vector.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%;border-radius:2px"></div>
 <a style="margin:16px;padding:5px 8px;background:#ff3c36;font-size:11px;color:#fff;font-weight:500;letter-spacing:1.3px">BUSINESS</a>
 <h1>Paano mag-Franchise ng McDonald's</h1>
