--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -51,10 +51,10 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 
 
 <div class="text" style="margin-top:115px">
-<div style="text-align:center;padding:0 16px; overflow:hidden; width:100%;margin:20px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<div style="text-align:center;padding:0 16px; overflow:hidden; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 468x60 -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:60px"
+     style="display:inline-block;width:100%;max-width:468px;height:60px"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="3583510300"></ins>
 <script>
