--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -51,7 +51,7 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 
 
 <div class="text" style="margin-top:115px">
-<div style="text-align:center;padding:0 16px; overflow:hidden; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<div style="text-align:center;padding:5px 16px 0 0; overflow:hidden; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 468x60 -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:100%;max-width:468px;height:60px"
@@ -60,7 +60,7 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>	
-<!-- Image --> <div style="padding:28px 16px 14px 16px"><img src="../../images/mixing-bowl-vector.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%;border-radius:2px"></div>
+<!-- Image --> <div style="padding:16px 16px 14px 16px"><img src="../../images/mixing-bowl-vector.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%;border-radius:2px"></div>
 <a style="margin:16px;padding:5px 8px;background:#ff3c36;font-size:11px;color:#fff;font-weight:500;letter-spacing:1.3px">BUSINESS</a>
 <h1>Paano mag-Franchise ng McDonald's</h1>
 <div style="width:100%; padding:13px 0 30px 17px; float:left"><img src="../../images/Spicy-Ginataang-Hipon.jpg" style="height:45px;width:45px;display:inline-block;float:left;border-radius:50%">
