--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -27,7 +27,7 @@ blockquote{padding:20px 35px;font-size:22px;font-weight:100;text-align:right;lin
 div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowrap}div.scrollmenu a {display:inline-block;color:white;text-align:center;padding:11px 14px;text-decoration:none;font-size:17px!important}div.scrollmenu a:hover{background-color:#777}
 </style></head><body>
 
-<div id="navbar" style="background:#ff3c36;position:fixed;color:white;width:100%;display:block">
+<div id="navbar" style="transition: top 0.3s;background:#ff3c36;position:fixed;color:white;width:100%;display:block">
 <img src="../../images/LogoNew7.png" alt="TagLish Blog" style="color:#fff;width:235px;padding:0 0 6px 0;opacity:.95">
 <div class="scrollmenu">
   <a href="#home">Home</a>
