--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -37,14 +37,9 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
   <a href="#support">Saan..?</a>
   <a href="#blog">Kailan...?</a>
   <a href="#tools">Bakit...?</a>  
-  <a href="#base">Base</a>
-  <a href="#custom">Custom</a>
-  <a href="#more">More</a>
-  <a href="#logo">Logo</a>
-  <a href="#friends">Friends</a>
-  <a href="#partners">Partners</a>
-  <a href="#people">People</a>
-  <a href="#work">Work</a>
+  <a href="#base">Magkano...?</a>
+  <a href="#custom">Forsale</a>
+  <a href="#more">Review</a>
 </div>
 </div>
 <script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-57px";}prevScrollpos = currentScrollPos;}</script>
