--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -24,7 +24,7 @@ p,.psize{letter-spacing:.1px;font-size:16.8px;line-height:1.62;padding:8px 16px;
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
 blockquote{color:#626567;padding:20px 35px;font-size:20px;font-weight:100;text-align:right;line-height:1.5}
 @font-face {font-family:MyFont; src: url(../../poppins-v1-latin-regular.woff);}
-div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowrap}div.scrollmenu a {display:inline-block;color:white;text-align:center;padding:11px 14px;text-decoration:none;font-size:17px!important}div.scrollmenu a:hover{background-color:#777}
+div.scrollmenu {padding:2px 0;background-color:#333;overflow:auto;width:100%;white-space:nowrap}div.scrollmenu a {display:inline-block;color:white;text-align:center;padding:9px 14px;text-decoration:none;boder-right:1px solid #f2f2f2;font-size:17px!important}div.scrollmenu a:hover{background-color:#777}
 </style></head><body>
 
 <div id="navbar" style="transition: top 0.1s;background:#ff3c36;position:fixed;color:white;width:100%;display:block">
@@ -38,8 +38,8 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
   <a href="#blog">Kailan...?</a>
   <a href="#tools">Bakit...?</a>  
   <a href="#base">Magkano...?</a>
-  <a href="#custom">Forsale</a>
-  <a href="#more">Review</a>
+  <a href="#custom">Market Place</a>
+  <a href="#more" style="padding-right:20px">Reviews</a>
 </div>
 </div>
 <script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-57px";}prevScrollpos = currentScrollPos;}</script>
