--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -39,7 +39,8 @@ div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowra
   <a href="#tools">Bakit...?</a>  
   <a href="#base">Magkano...?</a>
   <a href="#custom">Market Place</a>
-  <a href="#more" style="padding-right:40px">Reviews</a>
+  <a href="#custom">Reviews</a>	
+  <a href="#more" style="color:#ff3c36;padding-right:40px">Submit an Article</a>
 </div>
 </div>
 <script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-57px";}prevScrollpos = currentScrollPos;}</script>
