--- a/pcso-lotto-and-games/CM3.html
+++ b/pcso-lotto-and-games/CM3.html
@@ -24,7 +24,7 @@ p,.psize{letter-spacing:.1px;font-size:16.8px;line-height:1.62;padding:8px 16px;
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
 blockquote{color:#626567;padding:20px 35px;font-size:20px;font-weight:100;text-align:right;line-height:1.5}
 @font-face {font-family:MyFont; src: url(../../poppins-v1-latin-regular.woff);}
-div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowrap}div.scrollmenu a {letter-spacing:1px;display:inline-block;color:#fff;text-align:center;padding:12px 16px;text-decoration:none;font-size:17px!important}div.scrollmenu a:hover{background-color:#777}
+div.scrollmenu {background-color:#333;overflow:auto;width:100%;white-space:nowrap}div.scrollmenu a {letter-spacing:.75px;display:inline-block;color:#fff;text-align:center;padding:12px 16px;text-decoration:none;font-size:17px!important}div.scrollmenu a:hover{background-color:#777}
 </style></head><body>
 
 <div id="navbar" style="transition: top 0.1s;background:#ff3c36;position:fixed;color:white;width:100%;display:block">
