--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -276,8 +276,8 @@ function closeNav() {
 	
 	<a href="Mega-Lotto-6-45.html" class="ff" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Mega Lotto 6/45</a>
 	<a href="Grand-lotto-6-55.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Grand Lotto 6/55 &#x276f;</a>
-  	<br><form method="POST" action="https://api.staticman.net/v2/entry/VTM17/VTM17/master/pcso-lotto-and-games/super-lotto-6-49">
-  <input name="options[redirect]" type="hidden" value="https://lottoinfo.ph">
+  	<br><form method="POST" action="https://api.staticman.net/v2/entry/VTM17/VTM17/master/">
+  <input name="options[redirect]" type="hidden" value="pcso-lotto-and-games/super-lotto-6-49">
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <label><input name="fields[name]" type="text">Name</label>
   <label><input name="fields[email]" type="email">E-mail</label>
