--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Learn how to play Ultra Lotto 6/58. Everything you need to know about playing Ultra Lotto 6/58 is here. Click here to learn more." /> 
 <meta name="keywords" content="ultra lotto 6/58, how to play lotto, play lotto, ultra lotto, lotto" /> 
 <meta name="news_keywords" content="PCSO Lotto, ultra lotto 6/58, how to play lotto, play lotto, ultra lotto, lotto, pcso" />
+<link rel="amphtml" href="https://mercury.postlight.com/amp?url=https://lottoinfo.ph/pcso-lotto-and-games/ultra-lotto-6-58">	
 <link rel="original-source" href="https://lottoinfo.ph/pcso-lotto-and-games/Ultra-lotto-6-58" />
 <link rel="canonical" href="https://lottoinfo.ph/pcso-lotto-and-games/Ultra-lotto-6-58" />
 	<meta property="twitter:url" content="https://lottoinfo.ph/pcso-lotto-and-games/ultra-lotto-6-58" /> 
