--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -107,7 +107,7 @@ img {display:block; margin:auto; width:50%;} .row:after, row:before {content:"";
   <a href="../results-and-winnings.html" class="hov hide-s">Results & Winnings</a>
   <a href="#" class="hov hide-s">FAQs</a></div></div>
 <div class="topnav" style="background:#ffffff; z-index:1; width:100%; overflow:hidden; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)">
-  <a href="../index.html" class="hide-m hide-l" style="font-size:20px; color:#626567; margin-left:5px;"><b>Lotto Info Philippines</b></a>
+  <img src="../images/LogoMobile.png" alt="TagLish Blog" style="float:left;color:#fff;width:240px;padding:4px 0 4px 5px">
   <a href="javascript:void(0)" class="hide-l hide-m" style="font-size:22px; margin-right:10px; color:#626567; text-decoration:none; float:right;" onclick="openNav()">&#9776;</a>
 </div>
 <div id="mySidenav" class="sidenav" style="height:100%; width:0; position:fixed; z-index:1; top:0; left:0; overflow-x:hidden; transition:0.4s; padding-top:60px; background:#2d89ef">
