--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -86,7 +86,7 @@
  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 		
 <style>
-* {box-sizing: border-box;} body {margin:0;}html,body,p, a, li, table {font-family:Tahoma, Geneva, sans-serif;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} p, h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
+* {box-sizing: border-box;} body {margin:0;}html,body,p, h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:Tahoma, Geneva, sans-serif;font-weight:300}
 h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px;} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
 .show {display:block!important} @media (max-width:600px){.hide-s{display:none!important}} @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important}} @media (min-width:993px){.hide-l{display:none!important}}
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, li, table {color:#404040;} .hov:hover {border-bottom:3px solid white;} .hide, .htp{display:none!important;}
@@ -146,7 +146,7 @@ function closeNav() {
   	<a href="../PCSO-Lotto-and-Games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
   	<a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" class="ff" style="font-size:10px; color:#626567; text-decoration: none; display:inline-block">Ultra Lotto 6/58<span class="htp"> How to play UltraLotto 6/58</span></a>
  
-    <h2 style="color:#4B77BE;" class="ftext"><strong>PCSO Ultra Lotto 6/58<span class="htp"> How to play UltraLotto 6/58</span></strong></h2>
+    <h2 style="color:#4B77BE;" class="ftext">PCSO Ultra Lotto 6/58<span class="htp"> How to play UltraLotto 6/58</span></h2>
     <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
     <br>
     <p>The Ultra Lotto 6/58 is the biggest and the latest lottery game offered by the Philippine Charity Sweepstakes Office (PCSO). Giving players a chance to win a minimum guaranteed jackpot  of &#8369;50 million. The Ultra Lotto began on February 8, 2015. The chances of winning the jackpot are 1 in 40,475,358.</p>    
