--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -87,13 +87,13 @@
 		
 <style>
 * {box-sizing: border-box;} body {margin:0;}html,body,p, h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:Tahoma, Geneva, sans-serif;font-weight:300}
-h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px;} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
+h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px;line-height:1.5} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
 .show {display:block!important} @media (max-width:600px){.hide-s{display:none!important}} @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important}} @media (min-width:993px){.hide-l{display:none!important}}
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, li, table {color:#404040;} .hov:hover {border-bottom:3px solid white;} .hide, .htp{display:none!important;}
 .topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%} .navi {float:left; width:100%; display:block; padding:8px 16px; text-align:left; border:none; outline:none; text-decoration:none;}
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
-.footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none}
+.footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none} strong{font-weight:300}
 </style></head><body>
 
 	<div class="hide-s" style="text-transform:uppercase; background-color: #ffffff; display:table; clear:both; padding:0; text-align:center; width:100%;">
