--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -92,7 +92,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, l
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, li, table {color:#404040;} .hov:hover {border-bottom:3px solid white;} .hide, .htp{display:none!important;}
 .topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%} .navi {float:left; width:100%; display:block; padding:8px 16px; text-align:left; border:none; outline:none; text-decoration:none;}
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
-@media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
+@media (max-width: 600px){h1, h2, h3{font-size:20px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td  {padding:5px 5px}
 .footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none} strong{font-weight:300}
 </style></head><body>
 
