--- a/pcso-lotto-and-games/Swertres123.html
+++ b/pcso-lotto-and-games/Swertres123.html
@@ -26,7 +26,7 @@ p,.psize{letter-spacing:.1px;font-size:16px;line-height:1.68;padding:8.5px 16px;
 @media (max-width:600px){h1{line-height:1.4;margin-top:-8px;padding:25px 0 3px 16px}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar{transition: top 0.1s;padding:5px 0 0 0;z-index:4;height:77px;top:0;}#navbar img {display:block; margin-left:8%; width:50%;}
 @media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:}}
 @media (min-width:601px){.TitleBox{margin-top:-228px;position:absolute;margin-left:25%;width:75%}.TBText{background:rgba(248,250,255,.9);border-radius:8px;padding:30px 20px 10px 15px}h1{padding:20px 20px 0 15px;font-size:30px}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
-@media (min-width:901px){}.row:after, row:before {content:""; display:table; clear:both;}
+@media (min-width:901px){.Text{margin-top:150px}}.row:after, row:before {content:""; display:table; clear:both;}
 .box a{font-size:17px;padding:15px 16px;color:#6359a6;display:block;border-top:1px solid #e6edff} strong{font-weight:300}.box img{opacity:.85;float:right;display:inline-block;width:30px;padding:15px 0 1px 0;margin-right:10px}
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
 blockquote{padding:20px 35px;font-size:19px;font-weight:100;text-align:right;color:#6473b4;line-height:1.6}
@@ -68,7 +68,7 @@ div.scrollmenu a:hover {
 <script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-56px";}prevScrollpos = currentScrollPos;}</script>
 
 
-<div class="text" style="margin-top:110px;max-width:1200px;margin:auto">
+<div class="text" style="margin-top:110px;max-width:1000px;margin:auto">
 <!-- Image --> <div style="padding:28px 16px 14px 16px;"><img src="../../images/Classic-adobo.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%;border-radius:2px"></div>
 <div class="TitleBox"><div class="TBText row"><a style="border-radius:2px;margin:16px;padding:5.5px 10px;background-image:linear-gradient(80deg,#00aeff,#3369e7);font-size:11px;color:#fff;font-weight:500;letter-spacing:1.3px">BUSINESS</a>
 <h1>How to Play Swertres</h1>
