--- a/pcso-lotto-and-games/Swertres123.html
+++ b/pcso-lotto-and-games/Swertres123.html
@@ -54,7 +54,7 @@ div.scrollmenu a:hover {
 </style></head><body style="background:rgba(248,250,255,.5)">
 
 <div id="navbar" style="background:#fff;position:fixed;width:100%;display:block">
-<img src="../../images/LogoNew10.png" alt="TagLish Blog" style="color:#fff;width:220px;padding:6px 0 1px 0">
+<div style="max-width:1100px;margin:auto"><img src="../../images/LogoNew10.png" alt="TagLish Blog" style="color:#fff;width:220px;padding:6px 0 1px 0">
 <div class="scrollmenu">
   <a href="#home">Home</a>
   <a href="#news">What...?</a>
@@ -64,7 +64,7 @@ div.scrollmenu a:hover {
   <a href="#more">Reviews</a>
   <a href="#news">All Categories</a>
   <a href="#logo" style="border:none">Submit an Article</a>
-  </div></div>
+  </div></div></div>
 <script>var prevScrollpos = window.pageYOffset;window.onscroll = function() {var currentScrollPos = window.pageYOffset;if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0"} else {document.getElementById("navbar").style.top = "-56px";}prevScrollpos = currentScrollPos;}</script>
 
 
