--- a/pcso-lotto-and-games/Swertres123.html
+++ b/pcso-lotto-and-games/Swertres123.html
@@ -25,7 +25,7 @@ h1,h2,h3,h4,.title{font-family:MyFont;padding:0 16px;color:#3e396b;}h1{font-weig
 p,.psize{letter-spacing:.1px;font-size:16px;line-height:1.68;padding:8.5px 16px;color:#424f8a}a{text-decoration:none;color:#3079ED}footer p,footer a{color:#8792c5;font-size:14px;padding:0 0 0 30px;display:inline-block}
 @media (max-width:600px){h1{line-height:1.4;margin-top:-8px;padding:25px 0 3px 16px}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar{transition: top 0.1s;padding:5px 0 0 0;z-index:4;height:77px;top:0;}#navbar img {display:block; margin-left:8%; width:50%;}
 @media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:}}
-@media (min-width:601px){.TitleBox{margin-top:-228px;position:absolute;margin-left:25%;width:75%}.TBText{background:rgba(248,250,255,.9);border-radius:8px;padding:30px 20px 10px 15px}h1{padding:20px 20px 0 15px;font-size:30px}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
+@media (min-width:601px){.TitleBox{margin-top:-228px;position:absolute;margin-left:225px;width:675px}.TBText{background:rgba(248,250,255,.9);border-radius:8px;padding:30px 20px 10px 15px}h1{padding:20px 20px 0 15px;font-size:30px}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
 @media (min-width:901px){.text{max-width:900px;margin:auto}}.row:after, row:before {content:""; display:table; clear:both;}
 .box a{font-size:17px;padding:15px 16px;color:#6359a6;display:block;border-top:1px solid #e6edff} strong{font-weight:300}.box img{opacity:.85;float:right;display:inline-block;width:30px;padding:15px 0 1px 0;margin-right:10px}
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
