--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -278,25 +278,17 @@ function closeNav() {
 	<a href="Grand-lotto-6-55.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Grand Lotto 6/55 &#x276f;</a>
   	<br>
 			<h2 class="comments__heading heading-2">Leave a comment</h2>
-		
-		<form id="post-new-comment" class="form" action="https://api.staticman.net/v2/entry/VTM17/VTM17/comments" method="post">
-	    <input type="hidden" name="options[slug]" value="super-lotto-6-49.html">
-	    <input type="hidden" name="options[parent]" value="super-lotto-6-49.html">
-	    <input type="hidden" name="options[origin]" value="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49.html">
-	
-	
-	    
-	    <input type="text" name="company" class="text-field" style="display: none">
-	    <input class="form__field text-field" type="text" name="fields[name]" placeholder="Name" required/>
-	    <input class="form__field text-field" type="email" name="fields[email]" placeholder="Email address (will not be public)" required/>
-	    <input class="form__field text-field" type="address" name="fields[address]" placeholder="Address (do not fill!)" style="display: none"/>
-	    <textarea class="form__field text-field" rows="10" name="fields[message]" placeholder="Comment. Markdown is accepted." required></textarea>
-	    <input id="form-subscribe" type="checkbox" name="options[subscribe]" value="email" class="checkbox">
-	    <label for="form-subscribe" class="form__field checkbox__label">I want to be notified of new comments</label>
-	
-	
-	    <input class="cta" type="submit" value="Send" />
-		</form>  
+	<form method="POST" action="https://api.staticman.net/v2/entry/VTM17/VTM17/master/comments">
+  <input name="options[redirect]" type="hidden" value="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49">
+  
+  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <label><input name="fields[name]" type="text">Name</label>
+  <label><input name="fields[email]" type="email">E-mail</label>
+  <label><textarea name="fields[message]"></textarea>Message</label>
+  
+  <button type="submit">Go!</button>
+</form>	
+		 
 	</div>
     
   <div class="side">
