--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -281,7 +281,7 @@ function closeNav() {
 	<form method="POST" action="https://api.staticman.net/v2/entry/VTM17/VTM17/master/comments">
   <input name="options[redirect]" type="hidden" value="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49">
   
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <input name="options[slug]" type="hidden" value="super-lotto-6-49">
   <label><input name="fields[name]" type="text">Name</label>
   <label><input name="fields[email]" type="email">E-mail</label>
   <label><textarea name="fields[message]"></textarea>Message</label>
