--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -277,7 +277,13 @@ function closeNav() {
 	<a href="Mega-Lotto-6-45.html" class="ff" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Mega Lotto 6/45</a>
 	<a href="Grand-lotto-6-55.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Grand Lotto 6/55 &#x276f;</a>
   	<br>
-			<h2 class="comments__heading heading-2">Leave a comment</h2>
+	<section class="comments">
+	<div class="constrain--body">
+		<div class="comments__existing js-comments" aria-hidden="true">
+			<h2 class="comments__heading heading-2">Comments</h2>
+			
+		</div>
+	  <h2 class="comments__heading heading-2">Leave a comment</h2>
 	<form method="POST" action="https://api.staticman.net/v2/entry/VTM17/VTM17/master/comments">
   <input name="options[redirect]" type="hidden" value="https://lottoinfo.ph/pcso-lotto-and-games/super-lotto-6-49">
   
@@ -287,7 +293,7 @@ function closeNav() {
   <label><textarea name="fields[message]"></textarea>Message</label>
   
   <button type="submit">Go!</button>
-</form>	
+</form></section>	
 		 
 	</div>
     
