--- a/pcso-lotto-and-games/ST2Arial.html
+++ b/pcso-lotto-and-games/ST2Arial.html
@@ -11,13 +11,7 @@
 <meta property="article:tag" content="liver function" />
 <meta property="article:tag" content="potassium rich foods" />
 <meta property="article:tag" content="what does the liver do" />
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-8489405167836126",
-    enable_page_level_ads: true
-  });
-</script>
+
 <style>
 *{box-sizing:border-box;margin:0}html,body,.psize,a,.accordion,.title{font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;font-weight:300;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html,body{position:relative!important}.Author{width:100%;padding:11px 0 22px 17px;float:left}.Author img{height:45px;width:45px;display:inline-block;float:left;border-radius:50%}.AuthorName{-webkit-text-stroke:0;font-family:Times;color:#626567;font-size:14px;display:inline-block;-webkit-margin-before:5px;-webkit-margin-after:0;letter-spacing:.5px;float:left;line-height:1.4;padding:0 16px 0 12px}.Date{font-size:11.5px}.category{margin:16px;padding:5.5px 0;font-size:13.5px;color:#f22f46;font-weight:700;letter-spacing:.8px;font-family:Arial}
 h2,h3,h4,.title{font-weight:400;letter-spacing:-.3px;font-size:22px;line-height:1.4;-webkit-margin-before:18px;-webkit-margin-after:5px}
@@ -55,6 +49,15 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;background-color:#f9f9f9;over
 
 
 <div class="text" style="max-width:900px;margin:auto">
+<div style="text-align:center;padding:18px 16px 0 16px; overflow:hidden; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 468x60 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:100%;max-width:468px;height:60px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3583510300"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	
 <div style="padding:28px 16px 14px 16px;"><img src="../../images/6-58-how.png" alt="How to Franchise McDonald's in the Philippines" style="box-shadow:0 4px 20px rgba(148,151,155,.6);width:100%;border-radius:2px;"></div>
 
 <div class="TitleBox"><div class="TBText row">
