--- a/pcso-lotto-and-games/lifeWire2.html
+++ b/pcso-lotto-and-games/lifeWire2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#0073e6">
+<meta name="theme-color" content="#232840">
 <title></title>
 <meta property="article:tag" content="cirrhosis of the liver" />
 <meta property="article:tag" content="detox" />
