--- a/pcso-lotto-and-games/lifeWire2.html
+++ b/pcso-lotto-and-games/lifeWire2.html
@@ -114,6 +114,15 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;background-color:#f9f9f9;over
 <p>Playing Ultra Lotto 6/58 is simple. Go to any authorized PCSO lotto outlet and then get an Ultra Lotto 6/58 playslip and mark your chosen six numbers (numbers from 1 to 58) or if you want to play with randomly selected numbers, the Lucky Pick function will generate a number combination for you. After that submit your playslip to the outlet operator and wait for your ticket. You will pay ₱20 for every standard 6-number combination play.</p>
 <ul><li>Mark your chosen numbers only with a vertical line.</li>
 	<li>If an error is made, mark the "void" to indicate that board is cancelled.</li></ul>
+<div style="text-align:center;margin:23px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	
 <p>Increase your chances to win with different System Play / System Bet. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
 <ul><li>Mark your chosen system under the "SYS" (keep it blank if you will play standard 6-number combination).</li></ul>
 <p>In just one visit in a lotto outlet, you can bet in advance for up to six (6) consecutive draws.
@@ -133,7 +142,15 @@ Example: If you mark "6 Draws" on your playslip, you will pay ₱120, that is fo
 <h2>What if there are more than one jackpot winner?</h2><div class="TitleDiv"></div>
 <p>Ultra Lotto 6/58 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided among the winners equally.</p>
 <p>When there is no jackpot winner, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
-
+<div style="text-align:center;margin:23px 0"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
 <h2>Where can I see the Ultra Lotto 6/58 results?</h2><div class="TitleDiv"></div>
 <p>The draws is televise in PTV 4. You can also find the official and verified Ultra Lotto 6/58 results right here on the LottoInfo.ph website. Just head to the Ultra Lotto 6/58 draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
 <p>The draws are held at 9:00 p.m. every Tuesdays, fridays and sundays.</p>
