--- a/pcso-lotto-and-games/lifeWire2.html
+++ b/pcso-lotto-and-games/lifeWire2.html
@@ -39,7 +39,7 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;background-color:#f9f9f9;over
 .TitleDiv{border-top:1px solid #EEE;width:70px;margin:0 0 14px 14px}
 .accordion{border:none;background-color:inherit;cursor:pointer;padding:18px 12px;width:100%;text-align:left;outline:none;transition:0.4s;font-size:17px} .panel{padding:0 5px;background-color:inherit;max-height:0;overflow:hidden;transition:max-height 0.2s ease-out;border-bottom:1px solid #e6edff} .accordion:after{content: '\002B';color:#424f8a;font-weight: bold;float: right;margin-left: 5px;} .active:after{content: "\2212";}
 .box .title{font-size:22px;padding-top:0;font-family:Times;-webkit-text-stroke:0}.box p{font-size:16px;padding-top:0;}.box img{width:28%;height:;float:right;margin:4px 18px 5px 16px;border-radius:2px}.box{border-radius:8px;overflow:hidden;background:#fff;padding-bottom:7px;box-shadow:0 0 1.5px rgba(0,0,0,0.12),0 1.5px 1.5px rgba(0,0,0,0.12),0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.12);margin-bottom:10px;transition: 0.4s;}.box:hover{box-shadow:0 0 3px rgba(0,0,0,0.12),0 3px 3px rgba(0,0,0,0.24),0 0 6px rgba(0,0,0,0.12),0 6px 6px rgba(0,0,0,0.24)}
-
+iframe{width:100%!important}
 
 .menu a {
 			color:#385b83;
