--- a/pcso-lotto-and-games/Paul123.html
+++ b/pcso-lotto-and-games/Paul123.html
@@ -59,7 +59,35 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
 	<a href="#">Vacancies</a>
 	<a href="#">Contact</a></div></section></nav>
 
-<div class="text" style="max-width:1115px;margin:auto"><div class="hide-s AdBox" style="float:right;margin-bottom:30px;height:2515px"><div style="height:1257px"><div style="width:300px;height:250px;margin-bottom:40px;position:sticky;top:18px;background:red"></div></div><div style="height:1257px"><div style="width:300px;height:600px;position:sticky;top:18px;background:red"></div></div></div>
+<div class="text" style="max-width:1115px;margin:auto">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 720x90 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="7010760599"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
+	<div class="hide-s AdBox" style="float:right;margin-bottom:30px;height:2515px"><div style="height:1257px"><div style="margin-bottom:40px;position:sticky;top:18px"></div><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Top Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="1163424893"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div><div style="height:1257px"><div style="position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Top Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="1163424893"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div></div></div>
 <main>
 <div class="SMShare" style="padding-left:16px;margin-top:28px;text-align:center;z-index:5"><div style="background:#3b5998"><img src="../../images/facebook.png" style="width:33px;margin-left:-6px;margin-bottom:-29px"></div><div style="background:#1da1f2"><img src="../../images/twitter.png" style="width:38px;margin-left:2px;margin-bottom:-35px"></div><div style="background:#db4437"><img src="../../images/icon-social-gplus.png" style="width:35px;margin-left:3px;margin-bottom:-28px"></div></div>
 
