--- a/pcso-lotto-and-games/Paul123.html
+++ b/pcso-lotto-and-games/Paul123.html
@@ -69,7 +69,7 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>	
-	<div class="hide-s AdBox" style="float:right;margin-bottom:30px;height:2515px"><div style="height:1257px"><div style="margin-bottom:40px;position:sticky;top:18px"></div><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div class="hide-s AdBox" style="float:right;margin-bottom:30px;height:2515px"><div style="height:1257px"><div style="margin-bottom:40px;position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Top Ad -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -78,7 +78,7 @@ div.scrollmenu {padding:0 10px;letter-spacing:-6px;text-align:center;overflow: a
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script></div><div style="height:1257px"><div style="position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</script></div></div><div style="height:1257px"><div style="position:sticky;top:18px"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Top Ad -->
 <ins class="adsbygoogle"
      style="display:block"
